--- a/gb/19/4/8/n11171138.md
+++ b/gb/19/4/8/n11171138.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eassqe376/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eassqe376/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eassqe376/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eassqe376/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eassqe376/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eassqe376/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eassqe376/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eassqe376/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>布碌崙火后住宅楼存坍塌风险</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/04/132439-600x400.jpg" />
 <h6>布碌崙44街702号的大楼经过24小时的灭火，存在坍塌的风险。（大纪元资料图片）
 </h6>
 <hr>
-<p>【大纪元2019年04月08日讯】（大纪元记者蔡溶纽约报导）布碌崙日落公园7大道华社一多住宅公寓楼3日大火后，楼宇局5日的评估记录显示，这栋54户住户的大楼85％的屋顶坍塌，6层大楼的围墙有<ahref="https://github.com/eassqe376/djy/blob/master/gb/tag/%E5%9D%8D%E5%A1%8C%E9%A3%8E%E9%99%A9.md#1">坍塌风险</a>，火场附近存在安全隐患，也危及相邻楼宇财产。专业工程人员立即安装人行道栅栏、排除危险，并提供照明和出口。同时允许部分居民在工程师督导下分批回家取个人证件。</p>
+<p>【大纪元2019年04月08日讯】（大纪元记者蔡溶纽约报导）布碌崙日落公园7大道华社一多住宅公寓楼3日大火后，楼宇局5日的评估记录显示，这栋54户住户的大楼85％的屋顶坍塌，6层大楼的围墙有<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9D%8D%E5%A1%8C%E9%A3%8E%E9%99%A9.md#1">坍塌风险</a>，火场附近存在安全隐患，也危及相邻楼宇财产。专业工程人员立即安装人行道栅栏、排除危险，并提供照明和出口。同时允许部分居民在工程师督导下分批回家取个人证件。</p>
 <p>由于此次的火灾，至少有上百名灾民无家可归。官员说这座多住宅公寓楼已不再适合居住。</p>
 <p>此次火灾为何不好扑灭？ 为什么消防局来的很及时，但是动作迟缓，水龙放的慢？为什么消防局来了250人，但很多人站在那不救火？在大火发生后的数天内，消防救火成为火场居民关注的焦点，同时也带出了一些疑问和争议。</p>
 <p>大火是在上周三下午约4点40分报警的，刚开始是3级火警，大约45分钟后顶楼发生爆炸，火情升级到5级，消防局发出10-66信号，这个代码意味着需要解救被困的消防员，以及增加更高的警报反应，需增加坍塌救援特遣队、救护车等等一系列装备。</p>
-<figure id="attachment_11171151" style="width: 600px" class="wp-caption aligncenter"><img class="size-large wp-image-11171151" src="https://i.epochtimes.com/assets/uploads/2019/04/132438-600x450.jpg" alt="" width="600" b="450" /><figcaption class="wp-caption-text">火灾发生后，风助火势向水平方向迅速蔓延，从东向西北面窗口冒出大量黑色浓烟，巨大火焰不时喷出窗口。（FDNY）</figcaption></figure>
+<figure id="attachment_11171151" aria-describedby="caption-attachment-11171151" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2019/04/132438-600x450.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-11171151" src="https://i.epochtimes.com/assets/uploads/2019/04/132438-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-11171151" class="wp-caption-text">火灾发生后，风助火势向水平方向迅速蔓延，从东向西北面窗口冒出大量黑色浓烟，巨大火焰不时喷出窗口。（FDNY）</figcaption></figure>
 <p>根据消防局长苏迪克（John Sudnik）当晚的火情通报，这是一场非常困难的灭火战，首先是顶层起火，消防员需要一些时间进入起火的核心区，（拉水管）进入内部灭火；其次，大风让消防员没有退路。</p>
 <p>对于顶楼的爆炸，目前还未知原因。苏迪克说，通常由于起火房间经闷烧释放出大量可燃性气体，因空间有限，让可燃性气体浓度达爆炸范围内，一旦接触空气就容易发生瞬间爆炸。</p>
 <h2>楼内有足够空气而生轰燃</h2>
@@ -25,48 +25,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/9/5/1/n2512483.md#1">纽约五层楼房突然坍塌</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/9/5/17/n2529625.md#1">港星叶玉卿家的纽约香港超市大火 隔天轰然坍塌</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/13/7/23/n3923312.md#1">至少10伤 西南航空班机起落架坍塌 迫降纽约机场</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/15/3/30/n4399856.md#1">纽约气爆大楼坍塌 寻获两尸体</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/16/7/19/n8116320.md#1">【快讯】起重机坍塌 砸到纽约哈德逊河上大桥</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/18/9/14/n10713352.md#1">纽约日落公园华人工地坍塌 被埋者遗体寻获</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/7/n12600290.md#1">海外信用保证基金线上论坛 侨台商反应热烈</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/7/n12600365.md#1">纽约州、市议员连署  吁关闭堂食与非必要行业</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/7/n12600368.md#1">纽约市东村凌晨6级大火 百年教堂惨遭烧毁</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597628.md#1">为何这么多华人挺川 一名耆老对大选的观察</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/5/1/n2512483.md#1">纽约五层楼房突然坍塌</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/5/17/n2529625.md#1">港星叶玉卿家的纽约香港超市大火 隔天轰然坍塌</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/7/23/n3923312.md#1">至少10伤 西南航空班机起落架坍塌 迫降纽约机场</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/3/30/n4399856.md#1">纽约气爆大楼坍塌 寻获两尸体</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/7/19/n8116320.md#1">【快讯】起重机坍塌 砸到纽约哈德逊河上大桥</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/9/14/n10713352.md#1">纽约日落公园华人工地坍塌 被埋者遗体寻获</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741331.md#1">纽约市出现疑似猴痘病例</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741332.md#1">水牛城枪手遭大陪审团起诉</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741334.md#1">纽约上诉法庭恢复“隔膜法” 警察工会不服</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/20/n13741336.md#1">纽约市议会新法：大楼房东必须安装自动关闭门</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/25/n11612784.md#1" target="_blank">袁斌：韦君宜的后悔与林牧的反思</a></li><li><a href="https://github.com/eassqe376/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488663.md#1" target="_blank">寻获生命真谛 法国医院院长分享修炼感悟</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/20/n11125994.md#1" target="_blank">谁是中华文化的最大破坏者？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10902768.md#1" target="_blank">美向联合国提出关注 促中共停止迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/11/30/n12585066.md#1">川普是天选之人？ 专家解析他与圣经的关连</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/1/n12588670.md#1">姜子牙之女做王后 历经千年贤名传</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/11/19/n12560430.md#1">但丁《神曲》故事：欺诈——毒害世界的怪物</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597490.md#1">【微历史】恩格斯百年阴谋 结出2020美大选恶果</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597428.md#1">【十字路口】川普三大战场反击“选举政变”</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12596272.md#1">【重播】关键时刻 川普乔州助选集会演讲</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12597744.md#1">【西岸观察】舞弊视频主角现身 乔州州长变脸</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12598608.md#1">红三代当吹哨人 证明中国产假选票混入美国</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12598306.md#1">【特稿】拨乱反正 宪法赋予总统特别权力</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12597136.md#1">走红毯冻到下巴发抖 孟美岐反问一句登热搜</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12596927.md#1">传刘德华8岁女儿住院 朱丽倩陪同现身心脏科</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12596670.md#1">杜汶泽赴台拍新节目 介绍移民方式给香港手足</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12595062.md#1">Jin迎生日以Solo曲坦言倦怠不安 BTS成员送祝福</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12598104.md#1">李翊君演唱会星光云集 黄子佼助阵献上惊喜</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12595124.md#1">现在是几点？ CIA照片考验你的判断力</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12595215.md#1">按摩脚底2部位 远离失智症！大脑脊椎一起保养</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/4/n12595443.md#1">美传教士：左派对抗神的旨意 川普才是总统</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/2/n12590408.md#1">生姜别直接吃？国际药膳师：蒸一下功效更强</a></li>
-<li><a href="https://github.com/eassqe376/djy/blob/master/gb/20/12/5/n12598435.md#1">美医师：你该接种新冠疫苗吗？很多人没想过的事</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eassqe376/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eassqe376/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/8/n11171138.htm">布碌崙火后住宅楼存坍塌风险</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/4/8/n11171138.htm">布碌崙火后住宅楼存坍塌风险</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eassqe376/djy/blob/master/gb/19/4/8/n11171138.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eassqe376/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eassqe376/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eassqe376/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eassqe376/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eassqe376/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/4/8/n11171138.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
